--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,38 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@1,300&family=Roboto:wght@300&display=swap');
 .App {
   text-align: center;
 }
+body {
+ 
+font-family: 'Roboto Condensed', sans-serif;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
 }
+.navbar-light{
+  background-image: linear-gradient(to right, orange, orangered)
+}
+.navbar-brand{
+  font-weight: 500;
+ text-transform: uppercase;
+
+}
+.nav-link{
+  font-weight: 500;
+ text-transform: uppercase;
+}
+.navbar-nav > li > a {
+  margin-left: 15px;
+  
+}
+.navbar-nav > li > a:hover {
+  color: royalblue !important;
+}
+.navbar-nav > li> a:active,{ 
+  color: white !important ;
+}
+
+
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -22,17 +49,4 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
